--- a/build.gradle
+++ b/build.gradle
@@ -38,6 +38,8 @@ dependencies {
 	// implementation fileTree(dir: 'libs', includes: ['*.jar']) 
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 
+	implementation 'org.apache.httpcomponents.client5:httpclient5:5.1.3'
+
 	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-webflux'
