--- a/build.gradle
+++ b/build.gradle
@@ -43,10 +43,10 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web-services'
     implementation 'org.springframework.boot:spring-boot-starter-websocket'
     implementation "org.springframework.boot:spring-boot-starter-security"
-    compileOnly 'org.projectlombok:lombok'
+    compileOnly 'org.projectlombok:lombok:1.18.34'
     runtimeOnly 'org.postgresql:postgresql'
     annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
-    annotationProcessor 'org.projectlombok:lombok'
+    annotationProcessor 'org.projectlombok:lombok:1.18.34'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:2.0.1'
     implementation group: 'org.bgee.log4jdbc-log4j2', name: 'log4jdbc-log4j2-jdbc4.1', version: '1.16'
@@ -66,6 +66,9 @@ dependencies {
     implementation 'commons-beanutils:commons-beanutils:1.9.4'
     implementation "org.apache.poi:poi:3.17"
     implementation "org.apache.poi:poi-ooxml:3.17"
+
+    // JavaCV 및 FFmpeg - javacpp 명시적 추가
+    implementation 'org.bytedeco:javacpp:1.5.9'
     implementation group: 'org.bytedeco', name: 'javacv', version: '1.5.9'
     implementation group: 'org.bytedeco', name: 'ffmpeg', version: '6.0-1.5.9', classifier: 'windows-x86_64'
     implementation group: 'org.bytedeco', name: 'ffmpeg', version: '6.0-1.5.9', classifier: 'windows-x86'
@@ -73,6 +76,7 @@ dependencies {
     implementation group: 'org.bytedeco', name: 'ffmpeg', version: '6.0-1.5.9', classifier: 'linux-x86_64'
     implementation group: 'org.bytedeco', name: 'ffmpeg', version: '6.0-1.5.9', classifier: 'macosx-x86_64'
     implementation group: 'org.bytedeco', name: 'ffmpeg', version: '6.0-1.5.9', classifier: 'macosx-arm64'
+
     implementation group: 'com.google.code.gson', name: 'gson', version: '2.8.9'
     implementation group: 'com.github.kokorin.jaffree', name: 'jaffree', version: '2022.06.03'
     implementation group: 'javax.annotation', name: 'javax.annotation-api', version: '1.3.2'
