152. 42페이지 1. UI/UX 통일 (조회 그리드에서 검색 필터 처리)
- 코드성 데이터는 selectbox처리 (협력사 구분)
- 나머지 항목은 입력값에 따른 필터 처리 (즉시검색이 아닌 입력후 엔터처리)

--- a/.gitignore
+++ b/.gitignore
@@ -43,3 +43,5 @@ out/
 
 #src/main/resources/datasource.properties
 local.properties
+src/main/resources/application.properties
+src/main/resources/log4j2.xml
