--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -26,6 +26,7 @@ server.tomcat.connection-timeout=3600000
 server.tomcat.keep-alive-timeout=3600000
 server.tomcat.max-keep-alive-requests=-1
 server.jetty.idleTimeout=3600000
+server.tomcat.additional-tld-skip-patterns=javacv-*.jar,javacpp-*.jar,ffmpeg-*.jar,openblas-*.jar,opencv-*.jar,leptonica-*.jar,tesseract-*.jar,flycapture-*.jar,libdc1394-*.jar,libfreenect-*.jar,libfreenect2-*.jar,librealsense-*.jar,librealsense2-*.jar,videoinput-*.jar,artoolkitplus-*.jar,flandmark-*.jar
 
 # Redis \uC124\uC815
 spring.cache.type=redis
